<resources>
    <string name="app_name">Figma-LiveData</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="forgot_your_password"><u>Forgot Your Password?</u></string>
    <string name="login">Login</string>
    <string name="find_your_favorite_food">Find Your \nFavorite Food</string>
    <string name="what_do_you_want_to_order">What do you want to order?</string>
    <string name="special_deal_for_october">Special Deal For \nOctober</string>
    <string name="buy_now">Buy Now</string>
    <string name="nearest_restaurant">Nearest Restaurant</string>
    <string name="view_more">View More</string>
    <string name="selam_dostum">Selam dostum :)</string>
    <string name="sign_to_home">Bir sonraki ekrana geçiş için \"Login\" butonunu kullanabilirsin. :)</string>
    <string name="live_data">Livedata ekranına geçiş için \"Buy Now\" butonunu kullanabilirsin. :)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_menu">Popular Menu</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="chat">Chat</string>
    <string name="tamam">Tamam</string>
</resources>