<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_header_bg">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/img_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_text"
            app:layout_constraintEnd_toEndOf="@+id/iv_logo"
            app:layout_constraintStart_toStartOf="@+id/iv_logo"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/login_to_your_account"
            android:textColor="#09051C"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/iv_logo_text"
            app:layout_constraintStart_toStartOf="@+id/iv_logo_text"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo_text" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_edittext_bg"
            android:hint="@string/email"
            android:padding="24dp"
            android:textColorHint="#3B3B3B"
            app:layout_constraintEnd_toEndOf="@+id/tv_account"
            app:layout_constraintStart_toStartOf="@+id/tv_account"
            app:layout_constraintTop_toBottomOf="@+id/tv_account" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_edittext_bg"
            android:hint="@string/password"
            android:padding="24dp"
            android:textColorHint="#3B3B3B"
            app:layout_constraintEnd_toEndOf="@+id/et_email"
            app:layout_constraintStart_toStartOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <TextView
            android:id="@+id/tv_continue_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_to_your_account"
            android:textColor="#09051C"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_facebook"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_edittext_bg"
            android:drawableStart="@drawable/ic_facebook"
            android:drawablePadding="8dp"
            android:padding="24dp"
            android:text="@string/facebook"
            app:layout_constraintBottom_toBottomOf="@+id/btn_google"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_continue_with" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_google"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_edittext_bg"
            android:drawableStart="@drawable/ic_google"
            android:drawablePadding="8dp"
            android:padding="24dp"
            android:text="@string/google"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_continue_with" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_your_password"
            android:textColor="#53E88B"
            app:layout_constraintEnd_toEndOf="@+id/btn_google"
            app:layout_constraintStart_toStartOf="@+id/btn_facebook"
            app:layout_constraintTop_toBottomOf="@+id/btn_google" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/ic_button_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_forgot_password"
            app:layout_constraintStart_toStartOf="@+id/tv_forgot_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>