<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_pattern"
        tools:context=".ui.home.HomeActivity">

        <TextView
            android:id="@+id/tv_favorite_food_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_32"
            android:layout_marginTop="@dimen/space_60"
            android:text="@string/find_your_favorite_food"
            android:textColor="@color/black_1"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_28"
            android:background="@drawable/ic_notification"
            app:layout_constraintStart_toEndOf="@+id/tv_favorite_food_text"
            app:layout_constraintTop_toTopOf="@+id/tv_favorite_food_text" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_18"
            android:layout_marginEnd="@dimen/space_8"
            android:background="@drawable/ic_search_bg"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="@dimen/space_18"
            android:hint="@string/what_do_you_want_to_order"
            android:padding="@dimen/space_12"
            android:textColorHint="@color/orange_1"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/ib_filter"
            app:layout_constraintStart_toStartOf="@+id/tv_favorite_food_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_favorite_food_text" />

        <ImageButton
            android:id="@+id/ib_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_24"
            android:background="@drawable/ic_filter"
            app:layout_constraintBottom_toBottomOf="@+id/et_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_search" />

        <include
            android:id="@+id/cardview"
            layout="@layout/layout_cardview"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20"
            app:layout_constraintEnd_toEndOf="@+id/ib_filter"
            app:layout_constraintStart_toStartOf="@+id/et_search"
            app:layout_constraintTop_toBottomOf="@+id/et_search" />

        <TextView
            android:id="@+id/tv_nearest"
            android:text="@string/nearest_restaurant"
            app:layout_constraintStart_toStartOf="@+id/cardview"
            app:layout_constraintTop_toBottomOf="@+id/cardview"
            style="@style/recyclerview_title"/>

        <TextView
            android:id="@+id/tv_view_more"
            android:text="@string/view_more"
            app:layout_constraintBottom_toBottomOf="@+id/tv_nearest"
            app:layout_constraintEnd_toEndOf="@+id/cardview"
            app:layout_constraintTop_toBottomOf="@+id/cardview"
            style="@style/view_more"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_nearest_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_32"
            android:layout_marginVertical="@dimen/space_20"
            app:layout_constraintTop_toBottomOf="@+id/tv_nearest" />

        <TextView
            android:id="@+id/tv_popular_menu"
            android:text="@string/popular_menu"
            app:layout_constraintStart_toStartOf="@+id/cardview"
            app:layout_constraintTop_toBottomOf="@+id/rv_nearest_restaurant"
            style="@style/recyclerview_title"/>

        <TextView
            android:id="@+id/tv_view_more_"
            android:text="@string/view_more"
            app:layout_constraintBottom_toBottomOf="@+id/tv_popular_menu"
            app:layout_constraintEnd_toEndOf="@+id/cardview"
            app:layout_constraintTop_toBottomOf="@+id/rv_nearest_restaurant"
            style="@style/view_more"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_32"
            android:layout_marginVertical="@dimen/space_20"
            app:layout_constraintTop_toBottomOf="@+id/tv_popular_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>